--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -108,8 +108,8 @@
         app:outcomingBubblePaddingLeft="@dimen/message_bubble_corners_padding"
         app:outcomingBubblePaddingRight="@dimen/message_bubble_corners_padding"
         app:outcomingBubblePaddingTop="@dimen/message_bubble_corners_padding"
-        app:outcomingDefaultBubbleColor="@color/bg_message_list_outcoming_bubble"
-        app:outcomingDefaultBubblePressedColor="@color/bg_message_list_outcoming_bubble"
+        app:outcomingDefaultBubbleColor="@color/colorPrimary"
+        app:outcomingDefaultBubblePressedColor="@color/colorPrimary"
         app:outcomingDefaultBubbleSelectedColor="@color/transparent"
         app:outcomingImageTimeTextSize="12sp"
         app:outcomingTextColor="@color/nc_outcoming_text_default"
