--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,8 +21,7 @@
 
 <resources>
     <color name="colorPrimary">#0082C9</color>
-    <color name="colorPrimaryDark">#006AA3</color>
-    <color name="colorAccent">#007CC2</color>
+    <color name="textColorOnPrimaryBackground">#ffffff</color> <!-- white/black depending on primary color -->
 
     <!-- Text color of sent messages -->
     <color name="nc_outcoming_text_default">#FFFFFF</color>
@@ -30,9 +29,7 @@
     <color name="nc_incoming_text_default">#37505D</color>
 
     <!-- Name of person or group for the chat conversation -->
-    <color name="conversation_item_header">#37505D</color>
-    <color name="conversation_date">@color/warm_grey_two</color>
-    <color name="conversation_last_message">@color/warm_grey_four</color>
+    <color name="conversation_item_header">#000000</color>
     <color name="conversation_unread_bubble">#FFFFFF</color>
 
     <color name="nc_incoming_text_mention_you">#C98879</color>
@@ -41,12 +38,12 @@
     <color name="nc_darkRed">#D32F2F</color>
     <color name="nc_darkGreen">#006400</color>
     <color name="nc_white_color">@color/per70white</color>
-    <color name="nc_light_blue_color">#7FC0E3</color>
     <color name="controller_chat_separator">#E8E8E8</color>
     <color name="grey_600">#757575</color>
     <color name="nc_grey">#D5D5D5</color>
     <color name="controller_call_incomingCallTextView">#E9FFFFFF</color>
     <color name="grey950">#111111</color>
+    <color name="textColorMaxContrast">#767676</color>
     <color name="whiteHalfTransparent">#7Fffffff</color>
 
     <!-- Emoji list in chat window -->
@@ -59,14 +56,9 @@
 
     <color name="bg_default">#FFFFFF</color>
     <color name="bg_alt">@color/white60</color>
-    <color name="nc_chip_mention_you_background">#0083C9</color>
-    <color name="nc_chip_mention_others_background">@color/white</color>
     <color name="bg_dark_mention_chips">#333333</color>
 
-
     <color name="bg_message_list_incoming_bubble">#EFEFEF</color>
-    <color name="bg_message_list_outcoming_bubble">@color/colorPrimary</color>
 
-    <color name="nc_author_text">#65A7CA</color>
     <color name="bg_bottom_sheet">#46ffffff</color>
 </resources>
