Add phone book integration
Signed-off-by: tobiasKaminsky <tobias@kaminsky.me>

--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -217,6 +217,15 @@
             apc:mp_key="@string/nc_settings_link_previews_key"
             apc:mp_summary="@string/nc_settings_link_previews_desc"
             apc:mp_title="@string/nc_settings_link_previews_title" />
+        
+        <com.yarolegovich.mp.MaterialSwitchPreference
+            android:id="@+id/settings_phone_book_integration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            apc:mp_default_value="@bool/value_false"
+            apc:mp_key="@string/nc_settings_phone_book_integration_key"
+            apc:mp_summary="@string/nc_settings_phone_book_integration_desc"
+            apc:mp_title="@string/nc_settings_phone_book_integration_title" />
     </com.yarolegovich.mp.MaterialPreferenceCategory>
 
     <com.yarolegovich.mp.MaterialPreferenceCategory
