--- a/app/src/main/res/menu/chat_message_menu.xml
+++ b/app/src/main/res/menu/chat_message_menu.xml
@@ -6,12 +6,17 @@
         android:id="@+id/action_copy_message"
         android:icon="@drawable/ic_content_copy_white_24dp"
         android:title="@string/nc_copy_message"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_reply_to_message"
         android:icon="@drawable/ic_reply_white_24dp"
         android:title="@string/nc_reply"
-        app:showAsAction="always"
-        />
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_delete_message"
+        android:icon="@drawable/ic_delete_white_24dp"
+        android:title="@string/nc_delete_message"
+        app:showAsAction="always" />
 </menu>
