--- a/app/src/main/res/layout/call_item.xml
+++ b/app/src/main/res/layout/call_item.xml
@@ -26,6 +26,18 @@
     android:layout_weight="1"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/peer_nick_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="@android:color/white"
+        android:layout_centerHorizontal="true"/>
+
     <ImageView
         android:id="@+id/remote_audio_off"
         android:layout_width="16dp"
@@ -46,17 +58,6 @@
         android:layout_toEndOf="@id/remote_audio_off"
         android:src="@drawable/ic_videocam_off_white_24px"
         android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/peer_nick_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="@android:color/white" />
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/avatarImageView"
