Using container-style for text fields
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/server_entry_view.xml
+++ b/app/src/main/res/layout/server_entry_view.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ /*
   ~  * Nextcloud Talk application
   ~  *
@@ -20,58 +21,117 @@
   ~  */
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_gravity="center"
+    android:background="@color/colorPrimary"
+    android:fillViewport="true"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_logo"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_above="@+id/serverEntryTextInputLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/ic_logo" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/serverEntryTextInputLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="16dp"
-        app:errorTextColor="@color/white">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/image_logo"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/ic_logo" />
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/serverEntryTextInputLayout"
+            style="@style/Widget.App.Login.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:id="@+id/serverEntryTextInputEditText"
             android:hint="@string/nc_server_url"
-            android:imeOptions="actionDone"
-            android:inputType="textUri"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:singleLine="true"
-            android:textColor="@color/fg_inverse"
-            android:textCursorDrawable="@null" />
+            android:theme="@style/TextInputLayoutLogin"
+            app:endIconContentDescription="@string/nc_server_connect"
+            app:endIconDrawable="@drawable/ic_arrow_forward_white_24px"
+            app:endIconMode="custom"
+            app:endIconTint="@color/white">
 
-        <ProgressBar
-            android:layout_width="24dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/serverEntryTextInputEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:importantForAutofill="no"
+                android:inputType="textUri|textNoSuggestions"
+                android:lines="1"
+                android:minLines="1"
+                android:paddingStart="16dp"
+                android:paddingEnd="55dp"
+                android:scrollbars="vertical"
+                android:textColor="@color/white"
+                android:textColorHint="#80FFFFFF">
+
+                <requestFocus />
+
+            </com.google.android.material.textfield.TextInputEditText>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/host_url_input_helper_text"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/serverEntryProgressBar"
-            android:visibility="gone"
-            android:indeterminateTint="@color/white"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginHorizontal="8dp"
-            />
+            android:lineSpacingMultiplier="1.2"
+            android:paddingStart="16dp"
+            android:paddingTop="4dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="2dp"
+            android:text="@string/nc_server_helper_text"
+            android:textColor="#B3FFFFFF" />
 
-        </FrameLayout>
-    </com.google.android.material.textfield.TextInputLayout>
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/serverEntryProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingTop="2dp"
+            android:paddingEnd="2dp"
+            android:paddingBottom="2dp"
+            android:orientation="horizontal"
+            android:visibility="invisible">
+            <ProgressBar
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end|center_vertical"
+                android:indeterminateTint="@color/white"
+                android:visibility="visible" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="5dp"
+                android:paddingEnd="0dp"
+                android:text="@string/nc_server_testing_connection"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/error_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:paddingTop="2dp"
+            android:paddingEnd="2dp"
+            android:paddingBottom="2dp"
+            android:text="@string/nc_server_unsupported"
+            android:textColor="@color/white"
+            app:drawableStartCompat="@android:drawable/stat_sys_warning"
+            android:visibility="invisible" />
+
+    </LinearLayout>
+
+</ScrollView>
