Show avatars for incoming pictures in group chats
Signed-off-by: Dariusz Olszewski <starypatyk@users.noreply.github.com>

--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -28,13 +28,21 @@
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="2dp">
 
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@id/messageUserAvatar"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="8dp"
+        app:roundAsCircle="true" />
+
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_toEndOf="@id/messageUserAvatar"
         android:orientation="vertical"
-        android:layout_alignParentStart="true"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
