--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -43,6 +43,7 @@
         android:animateLayoutChanges="true">
 
         <RelativeLayout
+            android:id="@+id/avatarContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
